# torch-template

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: train.py
src/projectname/: datasets.py  models.py  utils.py
