[tool.poetry]
name = "projectname"
version = "0.1.0"
description = ""
authors = ["Damian Owerko <damowerko@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "projectname", from = "src"}]

[[tool.poetry.source]]
name = "pytorch"
url = "https://eternalphane.github.io/pytorch-pypi/"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
torch = "1.10.1+cu113"
pytorch-lightning = "^1.5.9"
numpy = "^1.22.1"
pandas = "<1.2"
matplotlib = "^3.5.1"
PySide6 = "^6.2.2.1"
torchinfo = "^1.6.3"

[tool.poetry.group.dev.dependencies]
black = "^21.12-beta.0"
jupyter = "^1.0.0"
guildai = "^0.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
